--- a/index.html
+++ b/index.html
@@ -28,16 +28,9 @@
         <button class="btn btn-info text-white mb-3" id="btn" type="button">
           add Product
         </button>
-        <!--  <button
-          class="btn btn-warning text-white"
-          id="btn_update"
-          type="button"
-        >
-          Update
-        </button> -->
       </form>
 
-      <table class="my-4 table">
+      <table class="my-4 table" aria-describedby="">
         <div class="search my-3 w-75 m-auto">
           <input
             type="text"
