--- a/index.html
+++ b/index.html
@@ -25,8 +25,19 @@
         <label for="productCat">productCat</label>
         <input type="text" id="productCat" class="form-control my-2" />
 
-        <button class="btn btn-info text-white mb-3" id="btn" type="button">
+        <button
+          class="btn btn-info text-white my-3 d-block"
+          id="btn"
+          type="button"
+        >
           add Product
+        </button>
+        <button
+          class="btn btn-warning text-white mb-3 d-none"
+          id="update"
+          type="button"
+        >
+          update
         </button>
       </form>
 
